istio-1.28.3/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: python-api-dr
spec:
  host: python-api
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
